WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170474
Do some minor FEColorMatrix code cleanup and optimization
https://bugs.webkit.org/show_bug.cgi?id=170474
Summary
Do some minor FEColorMatrix code cleanup and optimization
Simon Fraser (smfr)
Reported
2017-04-04 14:59:07 PDT
Do some minor FEColorMatrix code cleanup and optimization
Attachments
Patch
(8.81 KB, patch)
2017-04-04 16:30 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(8.80 KB, patch)
2017-04-04 16:31 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-04-04 16:30:32 PDT
Created
attachment 306228
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-04-04 16:31:34 PDT
Created
attachment 306229
[details]
Patch
Build Bot
Comment 3
2017-04-04 16:33:34 PDT
Attachment 306229
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/filters/FEColorMatrix.cpp:83: Extra space before [. [whitespace/brackets] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2017-04-04 17:23:50 PDT
Comment on
attachment 306229
[details]
Patch Clearing flags on attachment: 306229 Committed
r214916
: <
http://trac.webkit.org/changeset/214916
>
WebKit Commit Bot
Comment 5
2017-04-04 17:23:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug